--- a/fly.toml
+++ b/fly.toml
@@ -6,6 +6,14 @@
 app = 'product-recpients'
 primary_region = 'sin'
 
+[env]
+  NODE_ENV = "production"
+  SHOPIFY_API_KEY = "8ca8a34581a6fcfa87cd9467e146c165"
+  SHOPIFY_API_SECRET = "8294086081f4996774049f155c49c4b8"
+  SHOPIFY_SCOPES = "write_products, read_orders"
+  SHOPIFY_APP_URL = "https://product-recpients.fly.dev"
+
+
 [build]
 
 [http_service]
