--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.0.2",
     "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
+    "prisma": "^5.11.0",
     "isbot": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
+    "@prisma/client": "^5.11.0",
     "@remix-run/eslint-config": "^2.7.1",
     "@shopify/api-codegen-preset": "^1.1.1",
     "@types/eslint": "^8.40.0",
@@ -50,6 +52,7 @@
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.4",
     "typescript": "^5.2.2",
+    "prisma": "^5.11.0",
     "vite": "^5.1.3"
   },
   "workspaces": [
